<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.reb.dsd_ble.ui.act.MainActivity">

    <FrameLayout
        android:id="@+id/main_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <RadioGroup
        android:id="@+id/main_tab"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:background="@color/colorPrimary"
        android:layout_height="@dimen/main_tab_height"
        android:gravity="center"
        android:padding="4dp">


        <RadioButton
            android:id="@+id/devices"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:button="@null"
            android:gravity="center"
            android:textColor="@color/text_white"
            android:text="@string/device"
            android:drawableTop="@drawable/bluetooth"/>

        <RadioButton
            android:id="@+id/settings"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:button="@null"
            android:gravity="center"
            android:textColor="@color/text_white"
            android:text="@string/settings"
            android:drawableTop="@drawable/settings"/>

        <RadioButton
            android:id="@+id/about"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:button="@null"
            android:gravity="center"
            android:textColor="@color/text_white"
            android:text="@string/about"
            android:drawableTop="@drawable/info_point"/>

    </RadioGroup>

</LinearLayout>
